chamber home page v3.8 - Fixed some layout shift

--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -274,15 +274,17 @@ hero {
 /* ================= MAIN ================= */
 main {
     align-content: center;
+    align-items: center;
     background-color: var(--base-color);
     /* display: flex;
     flex-direction: column;
     flex: 1; */
-    grid-column: 2;
+    grid-column: 3;
+    justify-content: center;
     margin: 20px;
     padding: 0;
     /* margin: 0 auto; */
-    max-width: 100vw;
+    /* max-width: 100vw; */
     /* width: 100%; */
 }
 
@@ -404,7 +406,7 @@ div.layout button:hover {
     height: 2.5rem;
     margin-top: 2rem;
     margin: 0 auto;
-    max-width: 50%;
+    max-width: 100%;
     padding-right: 2rem;
     text-align: left;
 
@@ -425,7 +427,7 @@ div.layout button:hover {
 .keyevent {
 
 
-    background-color: #1EA896;
+    background-color: #bed;
     border-radius: 5px;
     box-shadow: 0px 0px 4px #888;
     display: flex;
