--- a/chamber/styles/chamber-small.css
+++ b/chamber/styles/chamber-small.css
@@ -112,12 +112,28 @@
         margin: 0;
         padding: 0;
     } */
-    main {
+    /* main {
         display: flex;
         flex-direction: column;
         align-content: center;
         margin: 0.7rem;
         padding: 0.7rem;
+    } */
+
+    main {
+        align-content: center;
+        align-items: center;
+        background-color: var(--base-color);
+        /* display: flex;
+        flex-direction: column;
+        flex: 1; */
+        grid-column: 2;
+        justify-content: center;
+        margin: 20px;
+        padding: 0;
+        /* margin: 0 auto; */
+        /* max-width: 100vw; */
+        /* width: 100%; */
     }
 
     .keyevent {
@@ -140,7 +156,19 @@
     }
 
     #dynamic-businesses {
+
+        align-items: center;
+        border-radius: 4px;
         font-family: var(--default-font);
+        font-size: 1rem;
+        justify-content: center;
+        height: 2.5rem;
+        margin-top: 2rem;
+        margin: 0 auto;
+        max-width: 50%;
+        padding-right: 2rem;
+        text-align: left;
+
     }
 
     span.business-labels {
@@ -260,6 +288,7 @@
 
         display: flex;
         flex-direction: column;
+        position: relative;
         gap: 2rem;
     }
 
@@ -299,7 +328,7 @@
 
 
 
-
+    /* 
     main {
         align-items: center;
         align-content: center;
@@ -307,7 +336,7 @@
         margin: 0;
         padding: 0;
 
-    }
+    } */
 
     #menu {
 
@@ -449,6 +478,7 @@
     .bottom-details {
         display: flex;
         flex-direction: column;
+        position: relative;
     }
 
     .horizontal {
